--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,3 +1,7 @@
+---
+title: 'Quickstart'
+description: 'Start building awesome documentation in under 5 minutes'
+---
 ## Open Agent Studio: No-Code RPA Platform Documentation
 
 This repository contains the documentation for **Open Agent Studio**, a revolutionary no-code platform for building Robotic Process Automation (RPA) agents. 
