Documentation edits made through Mintlify web editor

--- a/development.mdx
+++ b/development.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Quickstart'
+title: 'Open Agent Studio'
 description: 'Start building awesome documentation in under 5 minutes'
 ---
 ## Open Agent Studio: No-Code RPA Platform Documentation
