Documentation edits made through Mintlify web editor

--- a/development.mdx
+++ b/development.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Open Agent Studio'
-description: 'Start building awesome documentation in under 5 minutes'
+description: 'Open Agent Studio: No-Code RPA Platform Documentation'
 ---
 ## Open Agent Studio: No-Code RPA Platform Documentation
 
