--- a/introduction.mdx
+++ b/introduction.mdx
@@ -49,3 +49,635 @@ Traditional RPA tools rely heavily on code selectors and computer vision to inte
 Open Agent Studio eliminates this issue by using Large Language Models (LLMs) to interpret **semantic targets**. This allows you to describe what you want to automate in simple English. For example, instead of writing complex code to click a specific button, you can tell Open Agent Studio to "click the button that says 'Submit'".
 
 This approach enables robust and adaptable automations that withstand website design changes, making your agents significantly more efficient and reliable.
+
+
+### Key Features
+
+Open Agent Studio offers a comprehensive suite of features to empower anyone, regardless of their technical skills, to build powerful RPAs.
+
+#### 1.1 Semantic Targeting
+
+- Define actions and targets using plain English commands.
+- Eliminate the need for complex code selectors.
+- **Examples**:
+    - "Click the button labeled 'Login'"
+    - "Extract the text from the table header" 
+    - "Enter '{{my_variable}}' into the search field"
+
+#### 1.2 Node-Based Visual Workflow
+
+- Build automations through an intuitive drag-and-drop interface.
+- Utilize various node types representing distinct actions like clicks, keypresses, data extraction, data processing, and web interactions.
+- Connect nodes to define the flow and logic of your automation.
+
+#### 1.3 LLMs for Enhanced Understanding
+
+- Understand your semantic targets and translate them into specific actions.
+- Dynamically adapt to website changes.
+- Automate tasks on websites without building custom selectors for each element.
+
+#### 1.4 Variables and Data Management
+
+- Define variables to store data and dynamically use it throughout your automation.
+- Manage data from various sources, including web scraping, files (PDF, Docx, CSV, Excel), and API calls.
+
+#### 1.5 Scheduling and Triggers
+
+- Schedule your agents to run automatically at specific times or intervals using a visual cron scheduler.
+- Trigger agents based on:
+    - Scheduled events (specific times, intervals)
+    - Emails (specific content, sender)
+    - Webhooks (external triggers from other applications)
+    - SMS messages (specific content, sender)
+    - Phone calls (initiate automations based on voice prompts)
+    - Semantic Triggers (initiate automations based on specific screen states)
+
+#### 1.6 Agent Sharing and Community
+
+- Upload your completed agents to the Cheat Layer community to share with others.
+- Access a library of pre-built agents for various tasks, saving you development time.
+
+### Advanced Features
+
+Open Agent Studio provides a number of advanced features for building sophisticated and robust automations.
+
+#### 2.1 Looping
+
+- Implement looping mechanisms to iteratively execute actions on multiple targets. 
+- **Loop Total Runs**: Executes a section of the workflow a predetermined number of times.
+- **Loop Node Runs**: Executes a section of the workflow based on the number of times a specific node has executed. 
+    - Useful for processing lists of data, scraping multiple pages on a website, or sending out batch emails.
+
+#### 2.2 Conditional Logic
+
+- Use "If Else" nodes to create branching paths in your automation based on specific conditions.
+- Conditions can be based on:
+    - Variable values
+    - Comparisons (equals, greater than, less than)
+    - Regular expressions
+- This enables dynamic execution of actions based on data or website state changes.
+
+#### 2.3 Python Integration
+
+- Embed custom Python code blocks within your automation using the "Python Code" node.
+- Access Open Agent Studio's API through the provided `thread_signals` object within your code to:
+    - Send notifications (`thread_signals.notifications.emit`)
+    - Trigger internal actions (`thread_signals.chat.emit`)
+    - Interact with global variables (`graph.global_variables`)
+- This allows you to:
+    - Implement complex logic not possible with pre-built nodes
+    - Integrate with external libraries and services
+    - Perform advanced data manipulations
+
+#### 2.4 Web Scraping with "Magic Scraper"
+
+Efficiently extract data from websites using various "Magic Scraper" configurations.
+
+**Options**:
+
+- Target specific HTML elements (links, images, text)
+- Filter based on text content and attributes
+- Handle dynamic content
+- Use variables to dynamically define targets
+
+**Extracted data can be**:
+
+- Stored in variables
+- Used for further processing within the automation
+- Exported to external services like Google Sheets
+
+#### 2.5 Semantic Element Detection
+
+Combine "SemanticDescribe" and "Click" nodes for robust element interaction.
+
+- "SemanticDescribe" captures a target based on your description, even if its visual appearance changes.
+- "Click" then uses the captured target for precise interaction.
+- This method improves automation resilience against website design updates.
+
+#### 2.6 Data Processing with GPT-4
+
+Leverage GPT-4's capabilities to:
+
+- Summarize large amounts of text
+- Analyze and extract insights from data
+- Translate languages
+- Generate text content
+- Build conversational agents
+
+Use variables to pass data between nodes and GPT-4 prompts.
+
+#### 2.7 API Integrations
+
+Connect with external platforms and services through API calls using the "Send Data" and "Python Code" nodes.
+
+Automate processes involving:
+- Data Retrieval
+- Workflow Triggering
+- Real-time Data Exchange
+
+#### 2.8 Agent Management
+
+Easily manage your agents through the intuitive interface.
+
+**Features**:
+- Create, edit, and delete agents.
+- Save and open automation files (.cheat).
+- Version control for tracking changes.
+- Duplicate existing agents for quick customization.
+
+#### 2.9 Global Variables
+
+- Utilize global variables to store data and share it across different nodes within your automation.
+- Access variables through the dropdown menus in node properties.
+- Update variable values dynamically during automation execution.
+
+## Open Agent Studio: No-Code Action Library
+
+This documentation details Open Agent Studio's no-code actions, designed to build powerful desktop automations without writing code. Each action is described along with its input parameters and an example use case.
+
+### 1. Start Node
+
+**Icon:** ![](https://cheatlayer.com/static/media/play.3208b3fd.svg)
+
+**Description:**  Initiates the automation process by opening a specified application or a URL.
+
+**Input Parameters:**
+
+- **Initial Program:** The path to the program's executable (e.g., "C:\Program Files\Google\Chrome\Application\chrome.exe").
+- **Arguments:**  Additional commands for the program, often a URL for a web browser.
+- **Data:** Stores the node's settings in JSON format.
+
+**Example Use Case:**  To begin your automation by opening the Cheat Layer website, put your browser's path in "Initial Program" and "https://cheatlayer.com" in "Arguments".
+
+### 2. Move Mouse
+
+**Icon:** ![](https://cheatlayer.com/static/media/cursor-pointer.0a2d3a83.svg) 
+
+**Description:**  Moves the mouse cursor to precise coordinates on your screen.
+
+**Input Parameters:**
+
+- **X Coordinate:** Horizontal position (pixels).
+- **Y Coordinate:**  Vertical position (pixels).
+
+**Example Use Case:**  Place the cursor over a specific area within an application before clicking or typing.
+
+### 3. Click
+
+**Icon:** ![](https://cheatlayer.com/static/media/hand-pointer.424c7582.svg)
+
+**Description:**  Simulates various mouse click types, either by coordinates or using semantic targeting of elements.
+
+**Input Parameters:**
+
+- **Automation Input:**  Allows for dynamic clicks based on global variables or inputs from "phone_transcript", "email_transcript", or "sms_transcript".
+- **X:** Horizontal coordinate (pixels).
+- **Y:** Vertical coordinate (pixels).
+- **Click Type:**  
+    - "Single Left Click": Standard click.
+    - "Single Right Click": For opening right-click menus. 
+    - "Double Click": For opening files or selecting text.
+    - "Drag":  Click and hold for moving elements. 
+- **Mode:** 
+    - **Desktop:** Clicks are based on "X" and "Y" coordinates.
+    - **Browser:**  Targets elements within the web browser using a semantic description ("Target In English").
+    - **First/Last:** If there are multiple matches, clicks the first or last matching element.
+    - **Loop Total Runs/Loop Node Runs:**   Repeats the click a set number of times or based on the number of times this node has run.
+- **Target In English:** Describe the web element to be clicked (e.g., "Download button," "Menu link").
+- **Data:** Node settings in JSON.
+
+**Example Use Cases:**
+
+- Click a button on a form:  Set "Mode" to "Browser", describe the button in "Target In English".
+- Click a specific area in an application: Use "Desktop" mode and "X", "Y" coordinates. 
+
+### 4. Keypress
+
+**Icon:** ![](https://cheatlayer.com/static/media/keyboard.d61e33eb.svg)
+
+**Description:** Automates keyboard input, sending keystrokes and typing text to the active window.
+
+**Input Parameters:**
+
+- **String:**  The key or character sequence to type (e.g., "enter", "Hello, World!").
+- **Saved Values:**  Provides a quick option to type the current directory path. 
+- **GPT-4 Mode:** Let GPT-4 process the "String" before the keypress, enabling dynamic content generation.
+- **Automation Input:** Use a global variable to define the keystroke sequence. 
+- **Data:** Node settings in JSON.
+
+**Example Use Cases:**
+
+-  Press Enter to submit a form:  Set "String" to "enter".
+- Type a message into a document: Provide the text in the "String" parameter.
+
+### 5. Delay
+
+**Icon:** ![](https://cheatlayer.com/static/media/clock.4e99729c.svg)
+
+**Description:**  Introduces a pause in the automation to allow time for websites to load, processes to complete, etc.
+
+**Input Parameters:**
+
+- **seconds:** The duration of the pause expressed in seconds.
+
+**Example Use Case:** Wait for a web page to load after clicking a link before trying to interact with it.
+
+### 6. Open Program
+
+**Icon:**  ![](https://cheatlayer.com/static/media/box-arrow-up-right.34900e7b.svg)
+
+**Description:** Opens a specified program on your computer with optional arguments.
+
+**Input Parameters:**
+
+- **program:** The path to the application's executable file (e.g., "C:\Program Files\Notepad++\notepad++.exe").
+- **arguments:** (Optional) Parameters to pass to the program.  For a web browser, this would be the URL.
+- **Automated Input:** You can dynamically define the program and arguments using a global variable.
+- **Data:** Node settings in JSON. 
+
+**Example Use Case:** Open a website in Chrome by setting "program" to your Chrome executable path and "Arguments" to "https://www.example.com".
+
+### 7. Bash
+
+**Icon:** ![](https://cheatlayer.com/static/media/terminal.6dedc875.svg)
+
+**Description:**  Executes a bash command in your operating system's terminal.
+
+**Input Parameters:**
+
+- **command:** The bash command you want to be executed,  including any necessary arguments.
+
+**Example Use Case:**  Run a command to update a system package:  `sudo apt-get update`
+
+### 8. Python Code
+
+**Icon:** ![](https://cheatlayer.com/static/media/code.3c1ea885.svg)
+
+**Description:**  Embed custom Python code directly into your workflow to add complex logic or interact with external libraries. 
+
+**Input Parameters:**
+
+- **code:** The Python code block to execute.
+
+**Special Features:**
+
+- **Dynamic Variable Substitution:** Placeholders like `{{my_variable}}` will be replaced by the corresponding values from your global variables.
+- **Access to Internal Functions:**  Your code can access Open Agent Studio's internal functions to send notifications, manage variables, and more.
+
+**Example Use Cases:** 
+
+- **Data Processing:** Clean and manipulate data scraped from a website (e.g., extract specific values, format text). 
+- **API Integration:**  Interact with external web services by making API calls and handling the results.
+
+### 9. Magic Scraper (Semantic Scrape)
+
+**Icon:** ![](https://cheatlayer.com/static/media/search.0214d477.svg)
+
+**Description:** Extract data from websites or screenshots using natural language descriptions. Ideal for quick scraping without coding.
+
+**Input Parameters:**
+
+- **Semantic Description:** Describe the data you want,  as you would to another person (e.g., "product prices on this page", "links in the sidebar"). 
+- **Threshold:** Controls how strict the matching must be (0 to 1).  A higher value only captures elements that very closely match your description. 
+- **Mode:** 
+    - **First/All/Last:**  Scrapes the first, all, or the last matching elements. 
+    - **Loop Total Runs/Loop Node Runs:** Repeats the scrape based on a fixed loop or the number of times the node has executed. 
+- **Target:** Specify the types of web elements you're interested in: 
+    - `span`: Text inside `<span>` HTML tags.
+    -  `link text`: The visible text of links.
+    -  `link destination`:  The URL of links.
+    -  `article`: Content within `<article>` tags.
+    -  `div`:  Content inside `<div>` tags.
+    -  `Twitter posts`:  Targets text from Twitter post elements. 
+- **X, Y:** (Optional)  For screenshot scraping, use these to focus on a specific area of the screenshot. 
+- **Data:** Internal JSON node data.
+
+**Example Use Cases:**
+
+-  **Extract pricing data from an e-commerce website:**  Use a description like "prices of all the laptops."
+-  **Collect article titles from a news website:**  Use "article" as the "Target" and a description like "headlines of all articles."
+
+### 10. SemanticDescribe
+
+**Icon:** ![](https://cheatlayer.com/static/media/crosshair.f31205c4.svg)
+
+**Description:**  Describes a targeted region of a screenshot using AI. This provides a way  to dynamically identify web elements, even if their visual presentation changes.
+
+**Input Parameters:**
+
+- **Target In English:** Describe in plain English what you want to target (e.g., "The blue button that says 'Next'",  "The product image in the corner").
+- **Automation Input:** If needed, you can provide the description dynamically using a global variable. 
+- **Scrape Browser:** When used with web automations,  lets you specify the type of web elements to analyze (e.g., "Buttons").
+- **Data:** Node settings in JSON.
+
+**Example Use Case:**  Accurately target a button that has a varying position or changes its appearance from time to time.
+
+### 11. OCR
+
+**Icon:** ![](https://cheatlayer.com/static/media/text-recognize.e5d1ea14.svg)
+
+**Description:**  Extracts text from images or screenshots using Optical Character Recognition. 
+
+**Input Parameters:**
+
+- **Bounding Box X1/Y1/X2/Y2:** Define a rectangular area (in pixels) on the image from which to extract the text (top left corner:  X1,Y1 ; bottom right corner: X2,Y2). 
+
+**Example Use Case:** Extract the invoice number from a scanned invoice image. 
+
+### 12. Print
+
+**Icon:**  ![](https://cheatlayer.com/static/media/printer.d42c85e3.svg)
+
+**Description:** Displays the value of a specific global variable in Open Agent Studio's console for debugging.
+
+**Input Parameters:**
+
+- ** Variables:** Select the global variable whose contents you want to see in the console output.
+
+**Example Use Case:**   Ensure that data scraped from a website has been stored correctly in a global variable before using it in another action. 
+
+### 13. Scroll
+
+**Icon:** ![](https://cheatlayer.com/static/media/arrows-scroll-vertical.e77e4c20.svg)
+
+**Description:**  Automates the scrolling of a window - primarily useful for web pages. 
+
+**Input Parameters:**
+
+- **Distance:**  Specifies the amount of scrolling, with positive values scrolling down and negative values scrolling up.
+
+**Example Use Case:**  Scroll to the bottom of a long web page to reveal more content to be scraped.
+
+### 14. Send Data
+
+**Icon:** ![](https://cheatlayer.com/static/media/arrow-up-right-from-square.1693d318.svg)
+
+**Description:** Sends data to an external application or webhook using HTTP requests. Enables integration with web services.
+
+**Input Parameters:**
+
+- **Body Key 1/ Body Value 1 ... **:  These key-value pairs represent the data you want to send, with keys acting as labels.
+- **Request:** Typically "POST" for sending data.
+- **URL:** The web address to send the data to (e.g., a webhook URL, API endpoint).
+
+**Example Use Cases: **
+
+- **Add data to a Google Sheet:** Send the data to a special URL provided by Google Sheets.
+- **Trigger an action in another application:** Send data to a webhook configured to receive data and initiate a task. 
+
+### 15. If Else
+
+**Icon:** ![](https://cheatlayer.com/static/media/code-branch.6c47396c.svg)
+
+**Description:**  Adds conditional logic to your automations, letting the agent make choices based on data or conditions. 
+
+**Input Parameters:**
+
+- **Variables:**  The global variable to be evaluated. 
+- **operator**: 
+    - `includes`: Checks if one string contains another.
+    -  `equals`: Tests for an exact match. 
+    - `greater than / less than`:  For numerical comparisons.
+    -  `regex match`:  Uses regular expressions for more complex pattern matching. 
+- **condition:** The criteria to check against the "Variables" (e.g., a specific string, a number, a regular expression).
+
+**Example Use Case:** You're scraping a webpage. If the text "Out of Stock" is found, you might want to trigger one set of actions, and a different set if its "In Stock'.
+
+### 16. Generalized Agent
+
+**Icon:** ![](https://cheatlayer.com/static/media/robot.c5110a8d.svg)
+
+**Description:** Execute a pre-built automation agent — a self-contained automation flow — as a step within your larger workflow.  
+
+**Input Parameters:**
+
+- **prompt:** A brief description of the task you want the generalized agent to handle (e.g., "send a confirmation email", "upload a file to Dropbox," "check for new updates," "open a Google Sheet").  
+
+**Example Use Case:**   You've downloaded a file. Use a Generalized Agent to automate the process of uploading it to your chosen cloud storage provider.
+
+### 17. Cheat Layer Extension
+
+**Icon:** <img src="https://cheatlayer.com/static/media/puzzle-piece.7655668f.svg" alt="Cheat Layer Extension Icon">
+
+**Description:** Execute Javascript code directly within a web browser using the Cheat Layer extension. Excellent for front-end web automations.
+
+**Input Parameters:**
+
+ - **code:** The Javascript code to run. 
+ - **URL:** The webpage where this code should be executed. 
+
+**Example Use Case:** Automatically populate a web form with data without having to individually select each input field and type.
+
+### 18. Google Sheets
+
+**Icon:**  <img src="https://cheatlayer.com/static/media/file-spreadsheet.5e3d4974.svg" alt="Google Sheets Icon">
+
+**Description:**  Reads or writes data to and from Google Sheets,  ideal for storing scraped information, managing lists, or dynamic input.
+
+**Input Parameters:**
+
+- **URL:** The web address of your Google Sheet (including the sheet ID).
+- **Read/Write:**  Choose whether you want to "Read" data from or "Write" data to the sheet.
+- **sheet name:**  The name of the specific sheet tab (worksheet) within your Spreadsheet. 
+- **Row 1 / Row 2 ... **:  (For writing) Define which data variables go into each row.  (For reading) Define which rows to read from.
+
+**Example Use Cases:**
+
+- Log scraped product data in a Google Sheet.
+- Read a list of URLs from a Google Sheet as input for further automation actions. 
+
+### 19. Email
+
+**Icon:** ![](https://cheatlayer.com/static/media/envelope.e39582a8.svg)
+
+**Description:**  Sends an email message with optional attachments.
+
+**Input Parameters:**
+
+- **to**:  The email address of the recipient.
+- **to variable:**  Select a global variable that holds the recipient's email address (useful for dynamic emails). 
+- **subject**: Subject line of the email.
+- **body**:  The main content (message) of the email.
+- **Body variable**:  Select a global variable containing additional email content if needed.
+- **file**:  (Optional)  Path to the file that should be attached to the email.
+
+**Example Use Case:** Alert yourself by email when a specific condition is met during automation, such as a product becoming available. 
+
+Okay, here is the documentation for the remaining no-code actions.
+
+## Open Agent Studio: No-Code Action Library - Additional Actions
+
+### 20.  Riku.AI
+
+**Icon:** <img src="https://cheatlayer.com/static/media/riku.94d7420c.svg" alt="Riku.AI Icon">
+
+**Description:**   Accesses Riku.AI's advanced AI features for content creation and generation. 
+
+ **Input Parameters:**
+
+-  **Account Holder:** Your Riku.AI account username. 
+- **API Key**: Your Riku.AI API Key. 
+- **Prompt ID:**  The specific Riku.AI prompt you want to use (available within your Riku.AI account).
+- **n:** The number of outputs to generate.
+- **Input 1 / Input 2 / Input 3 ...**:   Prompt inputs, depending on the Riku.AI prompt's requirements.
+
+**Example Use Case:**  Automate the generation of product descriptions or creative writing using Riku's AI capabilities. 
+
+### 21. Math
+
+**Icon:** ![](https://cheatlayer.com/static/media/calculator.56001a7c.svg)
+
+**Description::** Perform basic arithmetic operations within your workflow.
+
+**Input Parameters:**
+
+- **action:** Select the operation (add, subtract,  multiply, divide).
+- **input:** A global variable containing the first number for the operation.
+- **value:** Either a number or another global variable containing the second number.
+
+**Example Use Case:**  Calculate discounts on e-commerce prices by subtracting a percentage.  
+
+### 22. GetData
+
+**Icon:** ![](https://cheatlayer.com/static/media/arrow-down-to-square.e6db1d76.svg)
+
+**Description:** Retrieves data from a URL, including web pages, APIs, or local files. 
+
+**Input Parameters:**
+
+- **URL:**  The URL or file path of the data you want to fetch.
+- **Headers:** (Optional)   Headers to include in the HTTP request, formatted as JSON (useful for API authentication or specifying content types).  
+
+**Example Use Cases:**
+
+- **Get Data from a website:**  Fetch the HTML content of a webpage.
+- **Call an API:**  Get data from an API endpoint.
+
+### 23. Download
+
+**Icon:** ![](https://cheatlayer.com/static/media/download.62b3f24e.svg)
+
+
+**Description:**  Downloads a file from a URL to your computer.
+
+**Input Parameters:**
+
+- **URL or File:**  The URL of the file to download or the path to a file if you want to open it.
+- **Download Location:** The path on your computer where the downloaded file will be saved.
+- **Headers:** (Optional)  HTTP headers, formatted as JSON.
+
+**Example Use Case:** Automate the process of downloading a file from a remote server. 
+
+### 24. Screenshot
+
+**Icon:** ![](https://cheatlayer.com/static/media/image.0152d78e.svg)
+
+**Description:** Captures a screenshot of your entire screen or a specified region.
+
+**Input Parameters:**
+
+- **Location:** The complete path where you want the screenshot file to be saved (e.g., "C:\screenshots\my_screenshot.png").
+
+**Example Use Case:** Document the state of your desktop during automation or capture images for visual analysis.
+
+### 25. Llama
+
+**Icon:** ![](https://cheatlayer.com/static/media/llama.08628078.svg) 
+
+**Description:**  Executes tasks using the Meta's Llama 2 language model.  
+
+**Input Parameters:** 
+
+- **Automation Input:** Select a global variable containing the input text or prompt for the Llama 2 model.
+- **Tracking Tag:** (Optional) If enabled, automatically adds a tracking tag to your output.
+
+**Example Use Cases:**
+
+-  **Summarize Text:**  Have Llama 2 condense a long article into a short summary.
+- **Generate Code:**   Ask it to write code in a specific programming language. 
+
+### 26. Webcam
+
+**Icon:**  ![](https://cheatlayer.com/static/media/camera.75221914.svg) 
+
+**Description:**  Captures an image from a connected webcam, saving the image to your computer.
+
+**Input Parameters:**
+
+-  **File Name:**  The name the captured image will be saved as (e.g.,  "webcam_capture.jpg").
+
+ **Example Use Case:** You could integrate webcam captures into a workflow that analyzes images for visual inspection tasks or for gathering visual data. 
+
+### 27. Stable Video  
+
+**Icon:**  <img src="https://cheatlayer.com/static/media/film.64c48209.svg" alt="Stable Video Icon">
+
+ **Description:**  Generates videos based on text descriptions, using a variation of Stable Diffusion optimized for dynamic video content (requires Replicate API integration).
+
+**Input Parameters:**
+
+- **prompt:** A detailed text description of the video you want to create. The more specific, the better (e.g.,  "a robot exploring a futuristic cityscape at night").
+- **motion bucket:**  Selects a category of motion to apply to your video (these motion buckets come from Replicate. You can find details on Replicate's model page). 
+- **file:**  The filename to save the generated video as.
+- **Automation Input:**  If your description is generated earlier in the workflow, you can use a variable here. 
+- **frames:**  Determines the number of frames and the technique used for generating video frames. Options like "25_frames_with_svd_xt" are from Replicate. Please check the Replicate model page for updated options. 
+- **resolution:**  
+    -  `maintain_aspect_ratio`: Keeps the original dimensions. 
+    -  `crop_to_16_9`:  Fits video into a 16:9 widescreen format.
+    -  `use_image_dimensions` : If your input is an image, the generated video will use its dimensions.
+
+**Example Use Cases:**
+
+- **Create animated product demos:**  Describe your product in action. 
+- **Generate short, conceptual videos:** Experiment with visual ideas or illustrate concepts for educational content. 
+
+### 28.  Stable Diffusion
+
+**Icon:** <img src="https://cheatlayer.com/static/media/stable-diffusion.77745b97.svg" alt="Stable Diffusion Icon">
+
+**Description:** Create stunning, photorealistic images from text prompts, powered by StabilityAI's Stable Diffusion (requires Replicate API integration).  
+
+**Input Parameters:**
+
+- **prompt:**  A detailed description of the image you want,  just as you would for an artist (e.g.,  "a hyperrealistic painting of a cat wearing sunglasses in a tropical paradise"). 
+- **Automation Input:** Lets you dynamically create prompts using the output of GPT-4 or other data in a global variable. 
+
+**Example Use Cases:**
+
+- Generate custom art for your projects. 
+- Visualize ideas from text descriptions. 
+-  Create concept art for websites, games, or marketing materials. 
+
+### 29. GPT-4 
+
+**Icon:** <img src="https://cheatlayer.com/static/media/gpt4.b3fb6046.svg" alt="GPT-4 Icon">
+
+**Description:**  Leverage the power of OpenAI's GPT-4 language model for advanced language processing and content creation.
+
+**Input Parameters:**
+
+- **input:** The text you want GPT-4 to work with. 
+- **Automation Input:**  If the input comes from previous actions in your automation, select a global variable here.
+- **Webhook Input:**  Configure how data is handled if the node is triggered by a webhook.
+- **type output:** If set to true, GPT-4's output will be treated as code, ready for execution.
+
+**Example Use Cases:**
+
+- **Content Generation:**  Create blog posts, write stories, poems, or scripts for videos. 
+- **Data Summarization:**  Condensing lengthy articles into digestible summaries. 
+- **Code Writing:** GPT-4 can be used to generate code snippets or write entire programs.
+- **Chatbots:**  Build AI-powered chatbots that interact naturally with users.
+
+### 30. General (Project Atlas)
+
+**Icon:** <img src="https://cheatlayer.com/static/media/atlas.9b8ade37.svg" alt="Project Atlas Icon">
+
+**Description:**  Describes the task you want to automate in plain English and lets the Cheat Layer AI (Project Atlas) figure out how to execute it, using its knowledge of UI patterns and web elements.
+
+**Input Parameters:**
+
+-  **prompt:**  Tell Project Atlas what you want it to do using clear and specific language. 
+
+**Example Use Case:** "Create a Twitter post with a picture of a cat and the hashtag #cutecats." Project Atlas will attempt to launch Twitter (if not already open), compose the post, find an image of a cat (possibly using AI image generation), and publish the tweet.
+
+
