Documentation edits made through Mintlify web editor

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -457,7 +457,7 @@ This documentation details Open Agent Studio's no-code actions, designed to buil
 
 ### 17. Cheat Layer Extension
 
-**Icon:** <img src="https://cheatlayer.com/static/media/puzzle-piece.7655668f.svg" alt="Cheat Layer Extension Icon">
+**Icon:** 
 
 **Description:** Execute Javascript code directly within a web browser using the Cheat Layer extension. Excellent for front-end web automations.
 
@@ -470,7 +470,7 @@ This documentation details Open Agent Studio's no-code actions, designed to buil
 
 ### 18. Google Sheets
 
-**Icon:**  <img src="https://cheatlayer.com/static/media/file-spreadsheet.5e3d4974.svg" alt="Google Sheets Icon">
+**Icon:**  
 
 **Description:**  Reads or writes data to and from Google Sheets,  ideal for storing scraped information, managing lists, or dynamic input.
 
@@ -509,7 +509,7 @@ Okay, here is the documentation for the remaining no-code actions.
 
 ### 20.  Riku.AI
 
-**Icon:** <img src="https://cheatlayer.com/static/media/riku.94d7420c.svg" alt="Riku.AI Icon">
+**Icon:** 
 
 **Description:**   Accesses Riku.AI's advanced AI features for content creation and generation. 
 
@@ -610,7 +610,7 @@ Okay, here is the documentation for the remaining no-code actions.
 
 ### 27. Stable Video  
 
-**Icon:**  <img src="https://cheatlayer.com/static/media/film.64c48209.svg" alt="Stable Video Icon">
+**Icon:** 
 
  **Description:**  Generates videos based on text descriptions, using a variation of Stable Diffusion optimized for dynamic video content (requires Replicate API integration).
 
@@ -633,7 +633,7 @@ Okay, here is the documentation for the remaining no-code actions.
 
 ### 28.  Stable Diffusion
 
-**Icon:** <img src="https://cheatlayer.com/static/media/stable-diffusion.77745b97.svg" alt="Stable Diffusion Icon">
+**Icon:**
 
 **Description:** Create stunning, photorealistic images from text prompts, powered by StabilityAI's Stable Diffusion (requires Replicate API integration).  
 
@@ -650,7 +650,7 @@ Okay, here is the documentation for the remaining no-code actions.
 
 ### 29. GPT-4 
 
-**Icon:** <img src="https://cheatlayer.com/static/media/gpt4.b3fb6046.svg" alt="GPT-4 Icon">
+**Icon:** 
 
 **Description:**  Leverage the power of OpenAI's GPT-4 language model for advanced language processing and content creation.
 
@@ -670,7 +670,7 @@ Okay, here is the documentation for the remaining no-code actions.
 
 ### 30. General (Project Atlas)
 
-**Icon:** <img src="https://cheatlayer.com/static/media/atlas.9b8ade37.svg" alt="Project Atlas Icon">
+**Icon:** 
 
 **Description:**  Describes the task you want to automate in plain English and lets the Cheat Layer AI (Project Atlas) figure out how to execute it, using its knowledge of UI patterns and web elements.
 
