--- a/introduction.mdx
+++ b/introduction.mdx
@@ -197,7 +197,7 @@ This documentation details Open Agent Studio's no-code actions, designed to buil
 
 ### 1. Start Node
 
-**Icon:** ![](https://cheatlayer.com/static/media/play.3208b3fd.svg)
+**Icon:** 
 
 **Description:**  Initiates the automation process by opening a specified application or a URL.
 
@@ -211,8 +211,7 @@ This documentation details Open Agent Studio's no-code actions, designed to buil
 
 ### 2. Move Mouse
 
-**Icon:** ![](https://cheatlayer.com/static/media/cursor-pointer.0a2d3a83.svg) 
-
+**Icon:** 
 **Description:**  Moves the mouse cursor to precise coordinates on your screen.
 
 **Input Parameters:**
@@ -224,7 +223,7 @@ This documentation details Open Agent Studio's no-code actions, designed to buil
 
 ### 3. Click
 
-**Icon:** ![](https://cheatlayer.com/static/media/hand-pointer.424c7582.svg)
+**Icon:** 
 
 **Description:**  Simulates various mouse click types, either by coordinates or using semantic targeting of elements.
 
@@ -250,3 +249,109 @@ This documentation details Open Agent Studio's no-code actions, designed to buil
 
 - Click a button on a form:  Set "Mode" to "Browser", describe the button in "Target In English".
 - Click a specific area in an application: Use "Desktop" mode and "X", "Y" coordinates. 
+
+### 4. Keypress
+
+**Icon:** 
+
+**Description:** Automates keyboard input, sending keystrokes and typing text to the active window.
+
+**Input Parameters:**
+
+- **String:**  The key or character sequence to type (e.g., "enter", "Hello, World!").
+- **Saved Values:**  Provides a quick option to type the current directory path. 
+- **GPT-4 Mode:** Let GPT-4 process the "String" before the keypress, enabling dynamic content generation.
+- **Automation Input:** Use a global variable to define the keystroke sequence. 
+- **Data:** Node settings in JSON.
+
+**Example Use Cases:**
+
+-  Press Enter to submit a form:  Set "String" to "enter".
+- Type a message into a document: Provide the text in the "String" parameter.
+
+### 5. Delay
+
+**Icon:** 
+
+**Description:**  Introduces a pause in the automation to allow time for websites to load, processes to complete, etc.
+
+**Input Parameters:**
+
+- **seconds:** The duration of the pause expressed in seconds.
+
+**Example Use Case:** Wait for a web page to load after clicking a link before trying to interact with it.
+
+### 6. Open Program
+
+**Icon:** 
+
+**Description:** Opens a specified program on your computer with optional arguments.
+
+**Input Parameters:**
+
+- **program:** The path to the application's executable file (e.g., "C:\Program Files\Notepad++\notepad++.exe").
+- **arguments:** (Optional) Parameters to pass to the program.  For a web browser, this would be the URL.
+- **Automated Input:** You can dynamically define the program and arguments using a global variable.
+- **Data:** Node settings in JSON. 
+
+**Example Use Case:** Open a website in Chrome by setting "program" to your Chrome executable path and "Arguments" to "https://www.example.com".
+
+### 7. Bash
+
+**Icon:** 
+
+**Description:**  Executes a bash command in your operating system's terminal.
+
+**Input Parameters:**
+
+- **command:** The bash command you want to be executed,  including any necessary arguments.
+
+**Example Use Case:**  Run a command to update a system package:  `sudo apt-get update`
+
+### 8. Python Code
+
+**Icon:** 
+
+**Description:**  Embed custom Python code directly into your workflow to add complex logic or interact with external libraries. 
+
+**Input Parameters:**
+
+- **code:** The Python code block to execute.
+
+**Special Features:**
+
+- **Dynamic Variable Substitution:** Placeholders like `{{my_variable}}` will be replaced by the corresponding values from your global variables.
+- **Access to Internal Functions:**  Your code can access Open Agent Studio's internal functions to send notifications, manage variables, and more.
+
+**Example Use Cases:** 
+
+- **Data Processing:** Clean and manipulate data scraped from a website (e.g., extract specific values, format text). 
+- **API Integration:**  Interact with external web services by making API calls and handling the results.
+
+### 9. Magic Scraper (Semantic Scrape)
+
+**Icon:** 
+
+**Description:** Extract data from websites or screenshots using natural language descriptions. Ideal for quick scraping without coding.
+
+**Input Parameters:**
+
+- **Semantic Description:** Describe the data you want,  as you would to another person (e.g., "product prices on this page", "links in the sidebar"). 
+- **Threshold:** Controls how strict the matching must be (0 to 1).  A higher value only captures elements that very closely match your description. 
+- **Mode:** 
+    - **First/All/Last:**  Scrapes the first, all, or the last matching elements. 
+    - **Loop Total Runs/Loop Node Runs:** Repeats the scrape based on a fixed loop or the number of times the node has executed. 
+- **Target:** Specify the types of web elements you're interested in: 
+    - `span`: Text inside `<span>` HTML tags.
+    -  `link text`: The visible text of links.
+    -  `link destination`:  The URL of links.
+    -  `article`: Content within `<article>` tags.
+    -  `div`:  Content inside `<div>` tags.
+    -  `Twitter posts`:  Targets text from Twitter post elements. 
+- **X, Y:** (Optional)  For screenshot scraping, use these to focus on a specific area of the screenshot. 
+- **Data:** Internal JSON node data.
+
+**Example Use Cases:**
+
+-  **Extract pricing data from an e-commerce website:**  Use a description like "prices of all the laptops."
+-  **Collect article titles from a news website:**  Use "article" as the "Target" and a description like "headlines of all articles."
