Documentation edits made through Mintlify web editor

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -25,3 +25,28 @@ Businesses today are threatening to fire employees and replace them with AI. We 
 In a future where the AI in your pocket can generate custom, secure, and free versions of all the most expensive business software, we believe there'll be a level playing field that removes the barrier to build these businesses. More small businesses will build competitive brands through personal relationships, better quality service, and network effects through unique data. We invite you to join us in building this future together faster.
 
 This is an older public version of our internal private repo which will be updated in the coming days with the latest updates to Open Agent Studio 7.0.0 which can be downloaded at openagent.studio now. 
+
+
+
+## Agentic Process Automation
+![Generalized Agents framework](https://storage.googleapis.com/cheatlayer/agent.png)
+![image](https://github.com/user-attachments/assets/ff792176-c3cc-41df-bbaf-8728e7520540)
+
+
+### Semantic Targets
+Semantic targets distils the underlying intent of a target to english, so they still work even if services completely change their designs. This enables building robust, future-proof, agents. 
+
+Semantic targets can be dynamic or robust based on how strict the language is. 
+
+### Semantic Triggers
+![Semantic Triggers](https://storage.googleapis.com/cheatlayer/semtriggers.png)
+
+### Reasoning Based Targets
+![Reasoning Based Targets](https://storage.googleapis.com/cheatlayer/reasoning.png)  
+
+Traditional RPA tools rely heavily on code selectors and computer vision to interact with websites. These selectors are brittle and break whenever the target website updates its design, requiring manual code adjustments. 
+
+Open Agent Studio eliminates this issue by using Large Language Models (LLMs) to interpret **semantic targets**. This allows you to describe what you want to automate in simple English. For example, instead of writing complex code to click a specific button, you can tell Open Agent Studio to "click the button that says 'Submit'".
+
+This approach enables robust and adaptable automations that withstand website design changes, making your agents significantly more efficient and reliable.
+
