--- a/key-features.mdx
+++ b/key-features.mdx
@@ -1,6 +1,6 @@
 ---
-title: 'New file'
-description: 'Description of your new file.'
+title: 'Key Features'
+description: 'What makes Open Agent Studio unique'
 ---
 
 ### Key Features
