Documentation edits made through Mintlify web editor

--- a/key-features.mdx
+++ b/key-features.mdx
@@ -14,7 +14,7 @@ Open Agent Studio offers a comprehensive suite of features to empower anyone, re
 - **Examples**:
     - "Click the button labeled 'Login'"
     - "Extract the text from the table header" 
-    - "Enter '{{my_variable}}' into the search field"
+    - "Enter  into the search field"
 
 #### 1.2 Node-Based Visual Workflow
 
