--- a/introduction.mdx
+++ b/introduction.mdx
@@ -6,13 +6,13 @@ Open Agent Studio is the first cross platform desktop application built to enabl
 
 Download for Windows and Mac at https://openagent.studio.
 
-## Origin
+### Origin
 
 We founded Cheat Layer during the pandemic to help people who had lost their jobs and businesses rebuild online using GPT-3. We personally helped hundreds pro bono before turning to AI for help.
 
 In August 2021, we were the first startup to get approved by openAI to sell GPT-3 for automation. We were the first to publish our framework for agents, Project Atlas, in July 2022.
 
-## Long-term Vision
+### Long-term Vision
 
 Businesses today are threatening to fire employees and replace them with AI. We believe within 2 years, the AI necessary to generate most of those businesses will be a commodity.
 
