--- a/Agents-API.mdx
+++ b/Agents-API.mdx
@@ -4,6 +4,7 @@ description: 'Trigger agents from other services using a simple JSON API that re
 ---
 The Agents API now runs on every Open Agent Studio instance. An easy way to test this is to run Ngrok locally, or use Open Agent Studio which publishes a public IP address you can use as your personal Agents API. 
 ![Agents API](https://cdn.discordapp.com/attachments/1068385542875664424/1260499068044705812/image.png?ex=66dc01bc&is=66dab03c&hm=33dc8dac18d449adf34e58881f16423aeaadc81e1fbaeecda7733cea93479820&)
+It even returns all the saved agent data during the automation, plus the verification testing loop steps we use to verify each action. 
 
 You can trigger scripts using webhooks for Cheat Cloud AND Cheat Layer!
 
