--- a/No-code.mdx
+++ b/No-code.mdx
@@ -141,6 +141,9 @@ This documentation details Open Agent Studio's no-code actions, designed to buil
 ### 9. Magic Scraper (Semantic Scrape)
 
 **Icon:** 
+
+![Generalized Agents framework](images/magic_scraper.png)
+
 **Description:**  Describes a targeted region of a screenshot using AI. This provides a way  to dynamically identify web elements, even if their visual presentation changes.
 
 **Input Parameters:**
