--- a/No-code.mdx
+++ b/No-code.mdx
@@ -142,7 +142,7 @@ This documentation details Open Agent Studio's no-code actions, designed to buil
 
 **Icon:** 
 
-<img src="images/magic_scraper.png" syle="width:48px;" width="48">
+<img src="images/magic_scraper.png" style="width:48px;" width="48">
 
 **Description:**  Describes a targeted region of a screenshot using AI. This provides a way  to dynamically identify web elements, even if their visual presentation changes.
 
