Documentation edits made through Mintlify web editor

--- a/Open-Agent-Cloud.mdx
+++ b/Open-Agent-Cloud.mdx
@@ -2,3 +2,4 @@
 title: 'Open Agent Cloud'
 description: 'Launch agents on our cloud from a loom video without installing anything locally. '
 ---
+![Open Agent Cloud](https://storage.googleapis.com/cheatlayer/open_cloud.png)
