Documentation edits made through Mintlify web editor

--- a/No-code.mdx
+++ b/No-code.mdx
@@ -74,6 +74,36 @@ This documentation details Open Agent Studio's no-code actions, designed to buil
 - **Automation Input:** Use a global variable to define the keystroke sequence. 
 - **Data:** Node settings in JSON.
 
+We support the following keyboard keys if you enter them only into the string input:
+
+                    if "Current Directory" in str(x["saved"]):
+                        pyautogui.write(resource_path(''), interval=0.05)
+                    if "resource_path" in str(x["key"]).lower():
+                        pyautogui.write(resource_path(''), interval=0.05)
+                    if "backspace" in str(x["key"]).lower():
+                        pyautogui.press('backspace')
+                    elif "space" in str(x["key"]).lower():
+                        pyautogui.write(" ", interval=0.05)
+                    elif "period" in str(x["key"]).lower():
+                        pyautogui.write(".", interval=0.05)
+                    elif "slash" in str(x["key"]).lower():
+                        pyautogui.write("/", interval=0.05)
+                    elif "return" in str(x["key"]).lower():
+                        pyautogui.press('enter')
+                    elif "shift" in str(x["key"]).lower():
+                        pyautogui.keyDown("shift")
+                        self.shift_down = True
+                    elif "ctrl" in str(x["key"]).lower():
+                        pyautogui.keyDown("ctrl")
+                        self.ctrl_down = True
+                    elif "alt" in str(x["key"]).lower():
+                        pyautogui.keyDown("alt")
+                        self.alt_down = True
+                    elif "tab" in str(x["key"]).lower():
+                        pyautogui.keyDown("tab")
+                    elif "enter" in str(x["key"]).lower():
+                        pyautogui.press('enter')
+
 **Example Use Cases:**
 
 -  Press Enter to submit a form:  Set "String" to "enter".
