Documentation edits made through Mintlify web editor

--- a/No-code.mdx
+++ b/No-code.mdx
@@ -77,18 +77,18 @@ This documentation details Open Agent Studio's no-code actions, designed to buil
 We support the following keyboard keys if you enter them only into the string input:
 | Input String                      | Output Action       |
 |------------------------------------|---------------------|
-| "Current Directory" in saved       | Write resource path |
-| "resource_path" in key             | Write resource path |
-| "backspace" in key                 | Press backspace     |
-| "space" in key                     | Write space         |
-| "period" in key                    | Write period (.)    |
-| "slash" in key                     | Write slash (/)     |
-| "return" in key                    | Press enter         |
-| "shift" in key                     | Hold shift key      |
-| "ctrl" in key                      | Hold ctrl key       |
-| "alt" in key                       | Hold alt key        |
-| "tab" in key                       | Hold tab key        |
-| "enter" in key                     | Press enter         |
+| "Current Directory"        | Write resource path |
+| "resource_path"             | Write resource path |
+| "backspace"                  | Press backspace     |
+| "space"                      | Write space         |
+| "period"                     | Write period (.)    |
+| "slash"                      | Write slash (/)     |
+| "return"                     | Press enter         |
+| "shift"                      | Hold shift key      |
+| "ctrl"                       | Hold ctrl key       |
+| "alt"                        | Hold alt key        |
+| "tab"                        | Hold tab key        |
+| "enter"                      | Press enter         |
 
 **Example Use Cases:**
 
