Documentation edits made through Mintlify web editor

--- a/No-code.mdx
+++ b/No-code.mdx
@@ -296,7 +296,7 @@ Okay, here is the documentation for the remaining no-code actions.
 
 **Example Use Case:**  Calculate discounts on e-commerce prices by subtracting a percentage.  
 
-### 19. GetData
+### 19. Get Data
 
 **Icon:** ![](https://cheatlayer.com/static/media/arrow-down-to-square.e6db1d76.svg)
 
@@ -352,7 +352,7 @@ Okay, here is the documentation for the remaining no-code actions.
 
  **Example Use Case:** You could integrate webcam captures into a workflow that analyzes images for visual inspection tasks or for gathering visual data. 
 
-### 23. Stable Video  
+### 23. Synthetic Video  
 
 **Icon:** 
 
