Documentation edits made through Mintlify web editor

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -45,6 +45,27 @@ This approach enables robust and adaptable automations that withstand website de
 
 Open Agent Studio offers a comprehensive suite of features to empower anyone, regardless of their technical skills, to build powerful RPAs.
 
+### Windows Install Instructions
+
+1) Download and extract cheatlayer.zip
+2) Double click cheatlayer.exe to open and click "more info" and "run anyway" if it asks. 
+3) Enter your Cheat Layer API key you can find at the bottom of the billing page at cheatlayer.com/billing. 
+
+### Mac Install Instructions
+
+1) Under "Privacy and Security" in your settings, add "terminal" to "Accessability", "Screen Recording", and "Full Disk Access". 
+2) Double click the unzipped app--it will close. 
+3) Open Privacy and Security "General" tab and click "run anyway" next to Cheat Layer. 
+
+### Linux Install Instructions
+
+1) Download main.zip 
+2) Extract main.zip
+3) Set ENV variable CHEAT_KEY with your cheatlayer.com/billing API key .
+4) ./main to run
+
+
+
 #### 1.1 Semantic Targeting
 
 - Define actions and targets using plain English commands.
