--- a/introduction.mdx
+++ b/introduction.mdx
@@ -45,6 +45,12 @@ This approach enables robust and adaptable automations that withstand website de
 
 Open Agent Studio offers a comprehensive suite of features to empower anyone, regardless of their technical skills, to build powerful RPAs.
 
+<video
+  controls
+  className="w-full aspect-video"
+  src="https://storage.googleapis.com/cheatlayer/finsta.mp4"
+></video>
+
 ### Windows Install Instructions
 
 1) Download and extract cheatlayer.zip
