Documentation edits made through Mintlify web editor

--- a/Scheduler.mdx
+++ b/Scheduler.mdx
@@ -2,3 +2,9 @@
 title: 'Scheduler'
 description: 'Schedule agents in natural language, using dropdowns, through the agents API in cron, or automatically at the ideal times with the Core Agent Team.'
 ---
+
+
+![Scheduler](https://storage.googleapis.com/cheatlayer/sched1.png)
+
+![Scheduler](https://storage.googleapis.com/cheatlayer/sched2.png)
+
