Documentation edits made through Mintlify web editor

--- a/Open-Agent-Cloud.mdx
+++ b/Open-Agent-Cloud.mdx
@@ -3,3 +3,23 @@ title: 'Open Agent Cloud'
 description: 'Launch agents on our cloud from a loom video without installing anything locally. '
 ---
 ![Open Agent Cloud](https://storage.googleapis.com/cheatlayer/open_cloud.png)
+
+
+
+<iframe
+  width="560"
+  height="315"
+  src="https://www.youtube.com/embed/M-PCkH4-518"
+  title="YouTube video player"
+  frameborder="0"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+  allowfullscreen
+></iframe>
+
+1) Upload a loom video to generate a no-code drag-drop agent in seconds to automate your process directly on our cloud servers.
+This is now the fastest way to build agents on the planet! We built a twitter agent that previously took 20 minutes in 5 seconds from a recorded video.
+2) Instantly run the agent in Open Agent Cloud and easily scale the same schedule to thousands of agents in parallel all streaming to our dashboard.
+Update automatically to the latest version of Open Agent Studio on refresh in 10 seconds without installing anything locally!
+3) Tackles the largest unsolved problem in every large enterprise and government with loss of expertise when employees and contractors leave.
+You can go back decades and upload videos to generate agents to regain lost expertise with any screen recorded videos.
+
