Documentation edits made through Mintlify web editor

--- a/Agents-API.mdx
+++ b/Agents-API.mdx
@@ -36,7 +36,7 @@ Returns a string representation of the agent's output data after executing all a
 
 <h1>Agent Node Types</h1>
 
-<h2>Browser Automation</h2>
+<h2>Desktop+Browser Automation</h2>
 
 <b>Delay</b>
 
