Documentation edits made through Mintlify web editor

--- a/Agents-API.mdx
+++ b/Agents-API.mdx
@@ -57,7 +57,7 @@ Types text or presses a key.
 
 <b>Click</b>
 
-Clicks on a specified target.
+Clicks on a specified target in english.
 
 <ParamField body="target" type="string"> Description of element to click in simple language</ParamField> <ParamField body="browser_mode" type="boolean" optional> Set to true for browser-specific clicks </ParamField> 
 ```
